--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  mocktail: ^0.3.0
+  firebase_core: ^1.24.0
+  firebase_auth: ^3.11.2
+  equatable: ^2.0.5
+  plugin_platform_interface: ^2.1.3
+  very_good_analysis: ^3.0.2
 
 dev_dependencies:
   flutter_test:
