--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   equatable: ^2.0.5
   plugin_platform_interface: ^2.1.3
   very_good_analysis: ^3.0.2
+  google_sign_in: ^5.4.2
 
 dev_dependencies:
   flutter_test:
