--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
-
+ 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -41,6 +40,12 @@ dependencies:
   plugin_platform_interface: ^2.1.3
   very_good_analysis: ^3.0.2
   google_sign_in: ^5.4.2
+  font_awesome_flutter: ^10.2.1
+  google_fonts: ^3.0.1
+  formz: ^0.4.1
+  hydrated_bloc: ^8.1.0
+  email_validator: ^2.1.17
+  # flutter_bloc: ^8.1.1
 
 dev_dependencies:
   flutter_test:
@@ -52,6 +57,7 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^2.0.0
+  bloc_test: ^9.1.0
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
@@ -65,9 +71,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - src/assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
@@ -94,3 +99,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+dependency_overrides:
+  bloc: ^8.1.0
+  bloc_test: ^9.1.0
+  flutter_bloc: ^8.0.1
+  
