--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,7 +45,16 @@ dependencies:
   formz: ^0.4.1
   hydrated_bloc: ^8.1.0
   email_validator: ^2.1.17
-  # flutter_bloc: ^8.1.1
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.17.0
+
+  local_storage_todos_api:
+    path: packages/local_storage_todos_api
+  todos_api:
+    path: packages/todos_api
+  todos_repository:
+    path: packages/todos_repository
 
 dev_dependencies:
   flutter_test:
