--- a/packages/todos_api/pubspec.yaml
+++ b/packages/todos_api/pubspec.yaml
@@ -8,13 +8,20 @@ environment:
   flutter: ">=1.17.0"
 
 dependencies:
+  equatable: ^2.0.5
   flutter:
     sdk: flutter
+  json_annotation: ^4.7.0
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  build_runner: ^2.3.0
+  json_serializable: ^6.5.1
+  test: ^1.21.1
+  very_good_analysis: ^3.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
