--- a/packages/local_storage_todos_api/pubspec.yaml
+++ b/packages/local_storage_todos_api/pubspec.yaml
@@ -10,11 +10,18 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+  meta: ^1.7.0
+  rxdart: ^0.27.5
+  shared_preferences: ^2.0.15
+  todos_api:
+    path: ../todos_api
+    
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  mocktail: ^0.3.0
+  very_good_analysis: ^3.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
