--- a/packages/todos_repository/pubspec.yaml
+++ b/packages/todos_repository/pubspec.yaml
@@ -11,10 +11,15 @@ dependencies:
   flutter:
     sdk: flutter
 
+  todos_api:
+    path: ../todos_api
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
   flutter_lints: ^2.0.0
+  mocktail: ^0.3.0
+  very_good_analysis: ^3.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
