--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -22,8 +22,8 @@ jobs:
       - name: Install dependencies
         run: flutter pub get
 
-      - name: Analyze project source
-        run: dart analyze
+#       - name: Analyze project source
+#         run: dart analyze
 
-      - name: Run tests
-        run: flutter test
+#       - name: Run tests
+#         run: flutter test
