--- a/.github/workflows/flutter.yml
+++ b/.github/workflows/flutter.yml
@@ -25,5 +25,5 @@ jobs:
 #       - name: Analyze project source
 #         run: dart analyze
 
-      - name: Run tests
-        run: flutter test
+#       - name: Run tests
+#         run: flutter test
