--- a/packages/local_storage_todos_api/pubspec.yaml
+++ b/packages/local_storage_todos_api/pubspec.yaml
@@ -1,6 +1,7 @@
 name: local_storage_todos_api
 description: A new Flutter package project.
 version: 0.0.1
+publish_to: none
 homepage:
 
 environment:
