--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -55,6 +55,7 @@ dependencies:
     path: packages/todos_api
   todos_repository:
     path: packages/todos_repository
+  path_provider: ^2.0.11
 
 dev_dependencies:
   flutter_test:
